# LLM-Tools

./: LICENSE  LLM-tools.txt  README.md  pyproject.toml
.github/: FUNDING.yml
examples/example_tool/: pyproject.toml
examples/example_tool/src/example_tool/api/: __init__.py  main.py
examples/example_tool/src/example_tool/cli/: __init__.py  main.py  parser.py
examples/example_tool/src/example_tool/description/: __init__.py  formats.py  schema.py
examples/example_tool/src/example_tool/execution/: __init__.py  client.py
src/llm_tools/: __init__.py  __main__.py
src/llm_tools/cli/: __init__.py  main.py  parser.py
src/llm_tools/description/: __init__.py  service.py
src/llm_tools/discovery/: __init__.py  service.py
src/llm_tools/execution/: __init__.py  formats.py  service.py
src/llm_tools/facade/: __init__.py  llm_tool.py
src/llm_tools/installation/: __init__.py  service.py
src/llm_tools/models/: __init__.py  errors.py  result.py  tool.py
src/llm_tools/process/: __init__.py  runner.py
src/llm_tools/registry/: __init__.py  store.py
src/llm_tools/removal/: __init__.py  service.py
tests/: test_calls.py  test_limits.py  test_registry.py
