[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "example-tool"
version = "0.1.0"
description = "Working reference implementation of the LLM Tools contract"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.104", "uvicorn>=0.24"]

[project.scripts]
example-tool = "example_tool.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
